syntax = "proto3";

//option csharp_namespace = "gRPC";

package greet;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (GreetRequest) returns (GreetReply);
}

// The request message containing the user's name.
message GreetRequest {
  Greeting greeting = 1;
}

// The response message containing the greetings.
message GreetReply {
  string message = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}